# Dijkstra_2t

./: .gitignore  CMakeLists.txt  Dane.ods  Sprawozdanie.odt  compile.sh  dikstra.c  libs.h  read_data.h
data/: graf1.txt  graf2.txt
include/: dikstra.h  get_data.h  graph.h  graphs.h  libs.h  priority_que.h  que.h  uint32_arrays.h
src/: adj_matrix.c  benchmark.c  dijkstra_bi.c  dijkstra_bi_1th.c  dijkstra_bi_2th.c  dijkstra_single.c  dikstra.c  get_data.c  get_data_from_file.c  main.c  priority_que.c  random_data.c  uint32_arrays.c
